[package]
name = "optimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.136"
serde_json = "^1.0"
toml = "0.5.3"
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
yup-oauth2 = "^5.0"
